Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_neelakandan-product.yml
+++ b/.github/workflows/main_neelakandan-product.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - neelakandan-product
+name: Build and deploy Node.js app to Azure Web App - neelakandan-Product
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -21,14 +21,14 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '24.x'
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -51,15 +51,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C193E112ACE947C0964DFAD8AD7BE502 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D9A33668933C45BFA481377743BCFACA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9CFCD175A9684AEB8D24F4D3013F10D5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1A9E329C1B6A4D48B41C0F69AE1F0A02 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DB3CBE6602C04625B0F97B82DD75236E }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4C4CCC7C944843D5908F0DF1AB183AD2 }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
-          app-name: 'neelakandan-product'
+          app-name: 'neelakandan-Product'
           slot-name: 'Production'
           package: .
           
